[package]
name = "spaceflight_elephant"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "spaceflight_elephant"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = ["winit", "softbuffer"]

[dependencies]
image = "0.25"

# Native dependencies
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
